Completed Stretch 1: Nav - Added a background color. Nav - Made nav fixed.

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -61,19 +61,25 @@ h1, h2, h3, h4, h5 {
 /* Your code starts here! */
 /*TOP NAVIGATION*/
 header {
-	margin: 27px auto 0 auto;
+	margin: 0 auto 0 auto;
 	width: 877px;
 }
 header nav {
-	width: 100%;
-	height: 36px;
+	position: fixed;
+	background-color: rgba(256,256,256,.9);
+	border-bottom: 1px solid #000;
+	height: 63px;
+	padding-top: 27px;
+	padding-bottom: 50px;
+	width: 877px;
+	z-index: 1;
 }
 header nav a {
-	color: #999;
+	display: inline-block;
+	color: #333;
 	font-size: 12px;
 	margin: 0 34px;
 	text-decoration: none;
-	vertical-align: text-top;
 }
 header nav a:first-of-type {
 	margin: 0 34px 0 0;
@@ -85,7 +91,7 @@ header nav img {
 /*HEADER TEXT AND IMAGE*/
 #header-banner {
 	display: inline-block;
-	margin-top: 75px;
+	margin-top: 102px;
 	padding-bottom: 77px;
 	width: 877px;
 }
